--- a/Python/MUNDO 2/Curso_em_Vídeo_PYTHON_3_MUNDO_2.ipynb
+++ b/Python/MUNDO 2/Curso_em_Vídeo_PYTHON_3_MUNDO_2.ipynb
@@ -742,7 +742,7 @@
         "id": "uiWmNCPFbLQF",
         "outputId": "d5b1fd19-05ef-4d3d-e39e-0076a57a5a23"
       },
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -785,7 +785,7 @@
         },
         "outputId": "ba93d033-2c2f-41d4-a9ac-2c6a8b8bd944"
       },
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -817,7 +817,7 @@
         },
         "outputId": "31f099f4-7a49-4806-d391-be2feab3e2d9"
       },
-      "execution_count": 22,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -852,7 +852,7 @@
         "id": "d499SAWzFLak",
         "outputId": "89a3def2-7c6f-4c68-f4d3-b0e4a7fc18b0"
       },
-      "execution_count": 65,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -867,13 +867,152 @@
     {
       "cell_type": "code",
       "source": [
-        ""
+        "# Exercício 49 – Tabuada v.2.0\n",
+        "# Refaça o DESAFIO 9, mostrando a tabuada de um número\n",
+        "# que o usuário escolher, só que agora utilizando um laço for\n",
+        "# by geanclm in 25/02/2022 at 06:46h\n",
+        "\n",
+        "# apresentando o mesmo resultado com List comprehension\n",
+        "n = int(input('digite um número para a tabuada: '))\n",
+        "[f'''{n} x {i} = {n*i}''' for i in range(1,10)]"
       ],
       "metadata": {
-        "id": "p07nP09JNkRd"
+        "id": "p07nP09JNkRd",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "b4f5c6c0-3cd7-4e57-d580-b399da30f39a"
       },
       "execution_count": null,
-      "outputs": []
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "digite um número para a tabuada: 5\n"
+          ]
+        },
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "['5 x 1 = 5',\n",
+              " '5 x 2 = 10',\n",
+              " '5 x 3 = 15',\n",
+              " '5 x 4 = 20',\n",
+              " '5 x 5 = 25',\n",
+              " '5 x 6 = 30',\n",
+              " '5 x 7 = 35',\n",
+              " '5 x 8 = 40',\n",
+              " '5 x 9 = 45']"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 14
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "%time [i for i in 'Curso em Vídeo' if i in 'aeiou']"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "4PxyynspSVMa",
+        "outputId": "e465ab9a-56ba-406f-93ad-f1c5b685d0fd"
+      },
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "CPU times: user 10 µs, sys: 1 µs, total: 11 µs\n",
+            "Wall time: 15.3 µs\n"
+          ]
+        },
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "['u', 'o', 'e', 'e', 'o']"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 1
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Exercício Python 50: Desenvolva um programa que leia seis números inteiros\n",
+        "# e mostre a soma apenas daqueles que forem pares. Se o valor digitado for ímpar, desconsidere-o.\n",
+        "# by geanclm in 26/02/2022 in 06:34h\n",
+        "n,p,o,ni,np = 1,0,1,0,0\n",
+        "while (n!=0):\n",
+        "    n = int(input(f'''digite o {o}º número inteiro ou zero se para finalizar: '''))\n",
+        "    if (n%2 == 0) and (n != 0):\n",
+        "        p += n\n",
+        "        np += 1\n",
+        "    elif (n%2 != 0) and (n != 0):\n",
+        "        ni += 1\n",
+        "    o += 1\n",
+        "print (f'''\n",
+        "        você digitou {np} número(s) pare(s) e a soma é {p},\n",
+        "       e tentou {ni} número(s) ímpares.''')"
+      ],
+      "metadata": {
+        "id": "rkOvtSmga3SR",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "07b1cae4-8bbb-4c59-a2af-11c2d77365c9"
+      },
+      "execution_count": 31,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "digite o 1º número inteiro ou zero se para finalizar: 1\n",
+            "digite o 2º número inteiro ou zero se para finalizar: 3\n",
+            "digite o 3º número inteiro ou zero se para finalizar: 0\n",
+            "\n",
+            "        você digitou 0 número(s) pare(s) e a soma é 0,\n",
+            "       e tentou 2 número(s) ímpares.\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "o"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "_CtZhSjFbNAQ",
+        "outputId": "e13eeb85-8123-41b3-9475-35594a5735e3"
+      },
+      "execution_count": 6,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "5"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 6
+        }
+      ]
     }
   ]
 }
