--- a/Python/MUNDO 2/Curso_em_Vídeo_PYTHON_3_MUNDO_2.ipynb
+++ b/Python/MUNDO 2/Curso_em_Vídeo_PYTHON_3_MUNDO_2.ipynb
@@ -972,7 +972,7 @@
         },
         "outputId": "07b1cae4-8bbb-4c59-a2af-11c2d77365c9"
       },
-      "execution_count": 31,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -991,28 +991,103 @@
     {
       "cell_type": "code",
       "source": [
-        "o"
+        "# Exercício Python 51: Desenvolva um programa que leia o primeiro termo\n",
+        "# e a razão de uma PA. No final, mostre os 10 primeiros termos dessa progressão.\n",
+        "# by geanclm in 17/02/2022 at 09:24h\n",
+        "\n",
+        "n = int(input(f'''primeiro termo da Progressão aritmética: '''))\n",
+        "r = int(input(f'''razão da PA: '''))\n",
+        "\n",
+        "# # solução geanclm\n",
+        "# limite = 10\n",
+        "# c = 0\n",
+        "# for i in range (n,100,r):\n",
+        "#     print (i, end=', ')\n",
+        "#     c += 1\n",
+        "#     if c == limite:\n",
+        "#         break\n",
+        "# print ('ACABOU!')\n",
+        "\n",
+        "# solução Curso em Video\n",
+        "limite = n+(10-1)*r \n",
+        "for i in range (n,limite+r,r):\n",
+        "    print (i, end=', ')    \n",
+        "print ('ACABOU!')"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "_CtZhSjFbNAQ",
-        "outputId": "e13eeb85-8123-41b3-9475-35594a5735e3"
+        "outputId": "dedd8f86-c8ca-4d93-f1d6-4a8c8eac4f86"
       },
-      "execution_count": 6,
+      "execution_count": 52,
       "outputs": [
         {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "5"
-            ]
-          },
-          "metadata": {},
-          "execution_count": 6
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "primeiro termo da Progressão aritmética: 1\n",
+            "razão da PA: 2\n",
+            "1, 3, 5, 7, 9, 11, 13, 15, 17, 19, ACABOU!\n"
+          ]
         }
       ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Exercício Python 52: Faça um programa que leia um número\n",
+        "# inteiro e diga se ele é ou não um número primo. \n",
+        "# by geanclm in 27/02/2022 at 10:43h\n",
+        "n = int(input(f'''digite um número inteiro: '''))\n",
+        "c = 0\n",
+        "for i in range (1,n+1):\n",
+        "    if (n%i == 0):\n",
+        "        print ('\\033[33m', end=' ')\n",
+        "        c += 1\n",
+        "    else:\n",
+        "        print ('\\033[31m', end=' ')\n",
+        "    print ('{}'.format(i), end=' ')\n",
+        "print (f'''\\n\\033\n",
+        "O número {n} é divisível {c} vezes''')\n",
+        "if c == 2:\n",
+        "    print ('NÚMERO PRIMO')\n",
+        "else:\n",
+        "    print ('NÃO É UM NÚMERO PRIMO')"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "asNYIhsJMJPn",
+        "outputId": "e6873831-c47f-4fce-d1c1-456cb328af2d"
+      },
+      "execution_count": 88,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "digite um número inteiro: 13\n",
+            "\u001b[33m 1 \u001b[31m 2 \u001b[31m 3 \u001b[31m 4 \u001b[31m 5 \u001b[31m 6 \u001b[31m 7 \u001b[31m 8 \u001b[31m 9 \u001b[31m 10 \u001b[31m 11 \u001b[31m 12 \u001b[33m 13 \n",
+            "\u001b\n",
+            "O número 13 é divisível 2 vezes\n",
+            "NÚMERO PRIMO\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        ""
+      ],
+      "metadata": {
+        "id": "gVqlBwNfbinR"
+      },
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
