--- a/Python/MUNDO 2/Curso_em_Vídeo_PYTHON_3_MUNDO_2.ipynb
+++ b/Python/MUNDO 2/Curso_em_Vídeo_PYTHON_3_MUNDO_2.ipynb
@@ -1021,7 +1021,7 @@
         "id": "_CtZhSjFbNAQ",
         "outputId": "dedd8f86-c8ca-4d93-f1d6-4a8c8eac4f86"
       },
-      "execution_count": 52,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1063,7 +1063,7 @@
         "id": "asNYIhsJMJPn",
         "outputId": "e6873831-c47f-4fce-d1c1-456cb328af2d"
       },
-      "execution_count": 88,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1081,10 +1081,74 @@
     {
       "cell_type": "code",
       "source": [
+        "# Exercício Python 53: Crie um programa que leia uma frase qualquer\n",
+        "# e diga se ela é um palíndromo, desconsiderando os espaços.\n",
+        "# Exemplos de palíndromos:\n",
+        "# APOS A SOPA, A SACADA DA CASA, A TORRE DA DERROTA,\n",
+        "# O LOBO AMA O BOLO, ANOTARAM A DATA DA MARATONA\n",
+        "# by geanclm in 28/02/2022 at 08:54h\n",
+        "\n",
+        "f = input(f'''digite um número inteiro: ''')\n",
+        "t = f.strip().upper().split()\n",
+        "junto = ''.join(t)\n",
+        "inverso = ''\n",
+        "\n",
+        "for i in range(len(junto)-1,-1,-1):\n",
+        "    inverso += (junto[i])\n",
+        "\n",
+        "if junto != inverso:\n",
+        "    mensagem = 'NÃO É PALÍNDROMO'\n",
+        "else:\n",
+        "    mensagem = 'É PALÍNDROMO'\n",
+        "\n",
+        "# =-=-=-=-=\n",
+        "inverso2 = junto[::-1] # forma rápica de inverter string no python\n",
+        "# =-=-=-=-=\n",
+        "\n",
+        "print(f'''\n",
+        "texto em lista: {t}\n",
+        "=-=-=-=-=\n",
+        "texto sem espaços: {junto}\n",
+        "texto inverso: {inverso}\n",
+        "texto inverso2: {inverso2}\n",
+        "=-=-=-=-=\n",
+        "o texto digitado {mensagem}\n",
+        "''')"
+      ],
+      "metadata": {
+        "id": "gVqlBwNfbinR",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "f36499b6-e743-4063-dfea-9ba029fdc37b"
+      },
+      "execution_count": 24,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "digite um número inteiro: Gean Carlos\n",
+            "\n",
+            "texto em lista: ['GEAN', 'CARLOS']\n",
+            "=-=-=-=-=\n",
+            "texto sem espaços: GEANCARLOS\n",
+            "texto inverso: SOLRACNAEG\n",
+            "texto inverso2: SOLRACNAEG\n",
+            "=-=-=-=-=\n",
+            "o texto digitado NÃO É PALÍNDROMO\n",
+            "\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
         ""
       ],
       "metadata": {
-        "id": "gVqlBwNfbinR"
+        "id": "yrayYW1TD_1_"
       },
       "execution_count": null,
       "outputs": []
