--- a/Python/MUNDO 2/Curso_em_Vídeo_PYTHON_3_MUNDO_2.ipynb
+++ b/Python/MUNDO 2/Curso_em_Vídeo_PYTHON_3_MUNDO_2.ipynb
@@ -6,6 +6,7 @@
       "name": "Curso em Vídeo - PYTHON 3 - MUNDO 2.ipynb",
       "provenance": [],
       "collapsed_sections": [
+        "Iv1JvJMxr_3l",
         "ORH0FziVvh-Q"
       ]
     },
@@ -1122,7 +1123,7 @@
         },
         "outputId": "f36499b6-e743-4063-dfea-9ba029fdc37b"
       },
-      "execution_count": 24,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1145,13 +1146,64 @@
     {
       "cell_type": "code",
       "source": [
-        ""
+        "# Exercício Python 54: Crie um programa que leia o ano de nascimento de sete pessoas.\n",
+        "# No final, mostre quantas pessoas ainda não atingiram a maioridade e quantas já são maiores\n",
+        "# by geanclm in 01/02/2022 at 10:18h\n",
+        "\n",
+        "from datetime import date\n",
+        "anoatual = date.today().year\n",
+        "anos, maior, menor, maioridade = [],0,0,21\n",
+        "for i in range(0,7,1):\n",
+        "    anos.append(int(input(f'''Ano de nasc da {i+1}º pessoa: ''')))\n",
+        "    if (anoatual-anos[i]>0):\n",
+        "        if (anoatual-anos[i]<maioridade):\n",
+        "            print (f'''Pessoa com  {anoatual-anos[i]} anos, menor de idade''')\n",
+        "            menor += 1\n",
+        "        elif (anoatual-anos[i]>=maioridade):\n",
+        "            print (f'''Pessoa com  {anoatual-anos[i]} anos, maior de idade''')\n",
+        "            maior += 1\n",
+        "    else:\n",
+        "        print ('você digitou um ano acima do tempo atual')\n",
+        "        break\n",
+        "print (f'''\n",
+        "        TOTAL DE ENTRADAS\n",
+        "        MENOR DE IDADE: {menor}\n",
+        "        MAIOR DE IDADE: {maior}''')"
       ],
       "metadata": {
-        "id": "yrayYW1TD_1_"
+        "id": "yrayYW1TD_1_",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "802d79dd-27c1-4710-fd30-7b466c7360e9"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 29,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Ano de nasc da 1º pessoa: 1975\n",
+            "Pessoa com  47 anos, maior de idade\n",
+            "Ano de nasc da 2º pessoa: 2015\n",
+            "Pessoa com  7 anos, menor de idade\n",
+            "Ano de nasc da 3º pessoa: 1985\n",
+            "Pessoa com  37 anos, maior de idade\n",
+            "Ano de nasc da 4º pessoa: 2020\n",
+            "Pessoa com  2 anos, menor de idade\n",
+            "Ano de nasc da 5º pessoa: 2021\n",
+            "Pessoa com  1 anos, menor de idade\n",
+            "Ano de nasc da 6º pessoa: 2010\n",
+            "Pessoa com  12 anos, menor de idade\n",
+            "Ano de nasc da 7º pessoa: 1988\n",
+            "Pessoa com  34 anos, maior de idade\n",
+            "\n",
+            "        TOTAL DE ENTRADAS\n",
+            "        MENOR DE IDADE: 4\n",
+            "        MAIOR DE IDADE: 3\n"
+          ]
+        }
+      ]
     }
   ]
 }
