--- a/Python/MUNDO 2/Curso_em_Vídeo_PYTHON_3_MUNDO_2.ipynb
+++ b/Python/MUNDO 2/Curso_em_Vídeo_PYTHON_3_MUNDO_2.ipynb
@@ -1177,7 +1177,7 @@
         },
         "outputId": "802d79dd-27c1-4710-fd30-7b466c7360e9"
       },
-      "execution_count": 29,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1204,6 +1204,157 @@
           ]
         }
       ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Exercício Python 55: Faça um programa que leia o peso de cinco pessoas.\n",
+        "# No final, mostre qual foi o maior e o menor peso lidos.\n",
+        "# by geanclm in 03/03/2022 at 09:18h\n",
+        "maior, menor =  0, 0\n",
+        "for i in range(0,5):\n",
+        "    m = float(input(f'''Massa da {i+1}º pessoa: '''))\n",
+        "    if menor == 0:\n",
+        "        menor = m\n",
+        "    else:\n",
+        "        if m > maior:\n",
+        "            maior = m \n",
+        "        if m < menor:\n",
+        "            menor = m\n",
+        "print (f'''\n",
+        "        MAIOR MASSA: {maior}Kg\n",
+        "        MENOR MASSA: {menor}Kg''')"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "YtwByBOwrssK",
+        "outputId": "adbd9c16-584a-4aff-cf20-5cf00079462b"
+      },
+      "execution_count": 19,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Massa da 1º pessoa: 80\n",
+            "Massa da 2º pessoa: 65.5\n",
+            "Massa da 3º pessoa: 45.9\n",
+            "Massa da 4º pessoa: 55\n",
+            "Massa da 5º pessoa: 110.5\n",
+            "\n",
+            "        MAIOR MASSA: 110.5 Kg\n",
+            "        MENOR MASSA: 45.9 Kg\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Exercício Python 56: Desenvolva um programa que leia\n",
+        "# nome, idade e sexo\n",
+        "# de 4 pessoas. No final do programa, mostre:\n",
+        "# a média de idade do grupo, qual é o nome do homem mais velho\n",
+        "# e quantas mulheres têm menos de 20 anos.\n",
+        "nome, idade, sexo = [],[],[]\n",
+        "ihmv, immn, qm20, nhmv = 0, 0, 0,''\n",
+        "acumulador, soma, m = 0,0,0\n",
+        "for i in range(0,4):\n",
+        "    nome.append(str(input(f'''Nome da {i+1}º pessoa: ''')).strip())\n",
+        "    idade.append(int(input(f'''Idade da {i+1}º pessoa: ''')))\n",
+        "    sexo.append(str(input(f'''Sexo [M/F] {i+1}º pessoa: ''')).strip())\n",
+        "    if immn == 0:\n",
+        "        immn =idade[i]\n",
+        "    if (idade[i] > ihmv)and (sexo[i] in 'Mm'):\n",
+        "        ihmv = idade[i]\n",
+        "        nhmv = nome[i] \n",
+        "    elif (idade[i] < immn) and (sexo[i] in'Ff'):\n",
+        "        immn = idade[i]\n",
+        "    if immn < 20:\n",
+        "        qm20 += 1\n",
+        "    acumulador += 1\n",
+        "    soma += idade[i]\n",
+        "m = (soma/acumulador) # média das idades       \n",
+        "print (f'''\n",
+        "REGISTRO DE DADOS\n",
+        "Homem de maior idade na base de dados: {nhmv}, {ihmv} anos\n",
+        "Quantidade de mulheres abaixo de 20 anos: {qm20}\n",
+        "Média de idades na base de dados: {m}\n",
+        "''')"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "y9ZyDoiy09Uf",
+        "outputId": "8f932b6b-31bd-4dab-c829-a4963f830df2"
+      },
+      "execution_count": 36,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Nome da 1º pessoa: Jéssica\n",
+            "Idade da 1º pessoa: 23\n",
+            "Sexo [M/F] 1º pessoa: F\n",
+            "Nome da 2º pessoa: Cláudio\n",
+            "Idade da 2º pessoa: 12\n",
+            "Sexo [M/F] 2º pessoa: M\n",
+            "Nome da 3º pessoa: Pedro\n",
+            "Idade da 3º pessoa: 75\n",
+            "Sexo [M/F] 3º pessoa: M\n",
+            "Nome da 4º pessoa: Maria\n",
+            "Idade da 4º pessoa: 15\n",
+            "Sexo [M/F] 4º pessoa: F\n",
+            "\n",
+            "REGISTRO DE DADOS\n",
+            "Homem de maior idade na base de dados: Pedro, 75 anos\n",
+            "Quantidade de mulheres abaixo de 20 anos: 1\n",
+            "Média de idades na base de dados: 31.25\n",
+            "\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "(47+19)/2"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "MuZ7kFcMYrP-",
+        "outputId": "c7fc0cb5-e9c7-4608-c648-0650d9ec5fa4"
+      },
+      "execution_count": 34,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "33.0"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 34
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        ""
+      ],
+      "metadata": {
+        "id": "K2luRFFzYvao"
+      },
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
