--- a/Python/MUNDO 2/Curso_em_Vídeo_PYTHON_3_MUNDO_2.ipynb
+++ b/Python/MUNDO 2/Curso_em_Vídeo_PYTHON_3_MUNDO_2.ipynb
@@ -8,7 +8,8 @@
       "collapsed_sections": [
         "Iv1JvJMxr_3l",
         "ORH0FziVvh-Q"
-      ]
+      ],
+      "toc_visible": true
     },
     "kernelspec": {
       "name": "python3",
@@ -1232,7 +1233,7 @@
         "id": "YtwByBOwrssK",
         "outputId": "adbd9c16-584a-4aff-cf20-5cf00079462b"
       },
-      "execution_count": 19,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1291,7 +1292,7 @@
         "id": "y9ZyDoiy09Uf",
         "outputId": "8f932b6b-31bd-4dab-c829-a4963f830df2"
       },
-      "execution_count": 36,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1331,7 +1332,7 @@
         "id": "MuZ7kFcMYrP-",
         "outputId": "c7fc0cb5-e9c7-4608-c648-0650d9ec5fa4"
       },
-      "execution_count": 34,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1355,6 +1356,41 @@
       },
       "execution_count": null,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# Aula 14 – Estrutura de repetição while"
+      ],
+      "metadata": {
+        "id": "2Siyaxt6rf5K"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "c = 0\n",
+        "while c < 10:\n",
+        "    print (c, end=' ')\n",
+        "    c += 1"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "zNMhRiqRrh4q",
+        "outputId": "b9066f5b-8e9b-40c2-f41b-3c59594d03c3"
+      },
+      "execution_count": 6,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "0 1 2 3 4 5 6 7 8 9 "
+          ]
+        }
+      ]
     }
   ]
 }
