--- a/Python/MUNDO 2/Curso_em_Vídeo_PYTHON_3_MUNDO_2.ipynb
+++ b/Python/MUNDO 2/Curso_em_Vídeo_PYTHON_3_MUNDO_2.ipynb
@@ -8,8 +8,7 @@
       "collapsed_sections": [
         "Iv1JvJMxr_3l",
         "ORH0FziVvh-Q"
-      ],
-      "toc_visible": true
+      ]
     },
     "kernelspec": {
       "name": "python3",
@@ -1379,9 +1378,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "zNMhRiqRrh4q",
-        "outputId": "b9066f5b-8e9b-40c2-f41b-3c59594d03c3"
+        "outputId": "00e5d90e-bc78-40b8-9e06-29533c51a2f7"
       },
-      "execution_count": 6,
+      "execution_count": 1,
       "outputs": [
         {
           "output_type": "stream",
@@ -1391,6 +1390,50 @@
           ]
         }
       ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Exercício Python 57: Faça um programa que leia o sexo de uma pessoa, mas só aceite os valores ‘M’ ou ‘F’.\n",
+        "# Caso esteja errado, peça a digitação novamente até ter um valor correto.\n",
+        "# by geanclm in 04/03/2022 at 08:33h\n",
+        "while True:\n",
+        "    s = str(input('digiteo o sexo [M/F]: ')).strip().upper()[0]\n",
+        "    if s in 'MF':\n",
+        "        break\n",
+        "    else:    \n",
+        "        print ('Favor digitar uma opção válida [M/F]: ')\n",
+        "print (f'''sexo informado no sistema: {s}''')"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "M7TClP_Gpc7a",
+        "outputId": "f4af06fe-8656-47eb-a02c-0d37613f8df4"
+      },
+      "execution_count": 23,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "digiteo o sexo [M/F]:       feminino\n",
+            "sexo informado no sistema: F\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        ""
+      ],
+      "metadata": {
+        "id": "uDG1OEaJp91S"
+      },
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
