--- a/Python/MUNDO 2/Curso_em_Vídeo_PYTHON_3_MUNDO_2.ipynb
+++ b/Python/MUNDO 2/Curso_em_Vídeo_PYTHON_3_MUNDO_2.ipynb
@@ -6,8 +6,7 @@
       "name": "Curso em Vídeo - PYTHON 3 - MUNDO 2.ipynb",
       "provenance": [],
       "collapsed_sections": [
-        "Iv1JvJMxr_3l",
-        "ORH0FziVvh-Q"
+        "Iv1JvJMxr_3l"
       ]
     },
     "kernelspec": {
@@ -1380,7 +1379,7 @@
         "id": "zNMhRiqRrh4q",
         "outputId": "00e5d90e-bc78-40b8-9e06-29533c51a2f7"
       },
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1412,7 +1411,7 @@
         "id": "M7TClP_Gpc7a",
         "outputId": "f4af06fe-8656-47eb-a02c-0d37613f8df4"
       },
-      "execution_count": 23,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1427,13 +1426,68 @@
     {
       "cell_type": "code",
       "source": [
-        ""
+        "# Exercício Python 58: Melhore o jogo do DESAFIO 28 onde o computador vai “pensar”\n",
+        "# em um número entre 0 e 10. Só que agora o jogador vai tentar adivinhar até acertar,\n",
+        "# mostrando no final quantos palpites foram necessários para vencer.\n",
+        "# - - -\n",
+        "# Recomendação ao canal Curso em Vídeo para novos cursos:\n",
+        "# Data science\n",
+        "# Criação de Games\n",
+        "# Edição de vídeos\n",
+        "# Projeto científico\n",
+        "# Segurança da informação\n",
+        "# - - -\n",
+        "# by geanclm in 05/03/2022 at 10h\n",
+        "\n",
+        "# Import lib\n",
+        "from  random import randint\n",
+        "\n",
+        "# Solution\n",
+        "number_c, c = randint(0,10),0\n",
+        "while True:\n",
+        "    number_h = (int(input('digite um número entre 0 e 10: ')))\n",
+        "#     print(f'''computador {number_c[0]}''')\n",
+        "#     print(f'''humano {number_h}''')\n",
+        "    if number_c == number_h:\n",
+        "        print ('\\nvoce acertou! PARABÉNS!\\n')\n",
+        "        print ('número da sorte', number_c)\n",
+        "        print ('seu número digitado:', number_h)\n",
+        "        break\n",
+        "    else:\n",
+        "        if (number_h < number_c):\n",
+        "            print ('...ainda não acertou! Tente um número MAIOR :-)')\n",
+        "        if (number_h > number_c):\n",
+        "            print ('...ainda não acertou! Tente um número MENOR :-)')\n",
+        "        c += 1\n",
+        "print (f'''\n",
+        "Número de tentativas: {c}''')"
       ],
       "metadata": {
-        "id": "uDG1OEaJp91S"
+        "id": "uDG1OEaJp91S",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "e54303f2-a80d-4d7f-a21a-7c01d22f6709"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 24,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "digite um número entre 0 e 10: 8\n",
+            "...ainda não acertou! Tente um número MAIOR :-)\n",
+            "digite um número entre 0 e 10: 9\n",
+            "\n",
+            "voce acertou! PARABÉNS!\n",
+            "\n",
+            "número da sorte 9\n",
+            "seu número digitado: 9\n",
+            "\n",
+            "Número de tentativas: 1\n"
+          ]
+        }
+      ]
     }
   ]
 }
