--- a/Python/MUNDO 2/Curso_em_Vídeo_PYTHON_3_MUNDO_2.ipynb
+++ b/Python/MUNDO 2/Curso_em_Vídeo_PYTHON_3_MUNDO_2.ipynb
@@ -1469,7 +1469,7 @@
         },
         "outputId": "e54303f2-a80d-4d7f-a21a-7c01d22f6709"
       },
-      "execution_count": 24,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1485,6 +1485,129 @@
             "seu número digitado: 9\n",
             "\n",
             "Número de tentativas: 1\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Exercício Python 059: Crie um programa que leia dois valores e mostre um menu na tela:\n",
+        "# [ 1 ] somar\n",
+        "# [ 2 ] multiplicar\n",
+        "# [ 3 ] maior\n",
+        "# [ 4 ] novos números\n",
+        "# [ 5 ] sair do programa\n",
+        "# Seu programa deverá realizar a operação solicitada em cada caso.\n",
+        "# by geanclm in 09/03/2022 at 06:01h\n",
+        "from time import sleep\n",
+        "maior = 0\n",
+        "n1 = int(input('Diginte o número 1: '))\n",
+        "n2 = int(input('Diginte o número 2: '))\n",
+        "menu = 0\n",
+        "while menu != 5:\n",
+        "    print (f'''\n",
+        "    =-=-=-=-=-=-=-=-=-=-=\n",
+        "    [ 1 ] somar\n",
+        "    [ 2 ] multiplicar\n",
+        "    [ 3 ] maior\n",
+        "    [ 4 ] novos números\n",
+        "    [ 5 ] sir\n",
+        "    =-=-=-=-=-=-=-=-=-=-=\n",
+        "    ''')\n",
+        "    menu = int(input('Digite a opção: '))\n",
+        "    if menu == 1:\n",
+        "        print (f'Soma dos números {n1}+{n2} é {n1+n2}')\n",
+        "        # p = str(input(print (f'''\n",
+        "        # Deseja continuar? [S/N]'''))).strip().upper()[0]\n",
+        "        # if p == 'N':\n",
+        "        #     break\n",
+        "    elif menu == 2:\n",
+        "        print (f'O produto da operação {n1} * {n2} é {n1*n2}')\n",
+        "    elif menu == 3:\n",
+        "        if n1 > n2:\n",
+        "            maior = n1\n",
+        "        else:\n",
+        "            maior = n2\n",
+        "        print (f'''Entre {n1} e {2}\n",
+        "               o maior número é {maior}''')    \n",
+        "    elif menu == 4:\n",
+        "        n1 = int(input('Diginte o número 1: '))\n",
+        "        n2 = int(input('Diginte o número 2: '))     \n",
+        "    elif menu == 5:\n",
+        "        print('Finalizando...')\n",
+        "    else:\n",
+        "        print ('Opção inválida! Digite uma opção do MENU, por favor.')\n",
+        "    print ('=-='*10)\n",
+        "    sleep(2)\n",
+        "print ('Volte sempre!')"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "b5acf8xG5C7A",
+        "outputId": "e981e8a6-7599-4b98-ae36-c63247e4e3e4"
+      },
+      "execution_count": 24,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Diginte o número 1: 7\n",
+            "Diginte o número 2: 8\n",
+            "\n",
+            "    =-=-=-=-=-=-=-=-=-=-=\n",
+            "    [ 1 ] somar\n",
+            "    [ 2 ] multiplicar\n",
+            "    [ 3 ] maior\n",
+            "    [ 4 ] novos números\n",
+            "    [ 5 ] sir\n",
+            "    =-=-=-=-=-=-=-=-=-=-=\n",
+            "    \n",
+            "Digite uma opção: 3\n",
+            "Entre 7 e 2\n",
+            "               o maior número é 8\n",
+            "=-==-==-==-==-==-==-==-==-==-=\n",
+            "\n",
+            "    =-=-=-=-=-=-=-=-=-=-=\n",
+            "    [ 1 ] somar\n",
+            "    [ 2 ] multiplicar\n",
+            "    [ 3 ] maior\n",
+            "    [ 4 ] novos números\n",
+            "    [ 5 ] sir\n",
+            "    =-=-=-=-=-=-=-=-=-=-=\n",
+            "    \n",
+            "Digite uma opção: 4\n",
+            "Diginte o número 1: 6\n",
+            "Diginte o número 2: 0\n",
+            "=-==-==-==-==-==-==-==-==-==-=\n",
+            "\n",
+            "    =-=-=-=-=-=-=-=-=-=-=\n",
+            "    [ 1 ] somar\n",
+            "    [ 2 ] multiplicar\n",
+            "    [ 3 ] maior\n",
+            "    [ 4 ] novos números\n",
+            "    [ 5 ] sir\n",
+            "    =-=-=-=-=-=-=-=-=-=-=\n",
+            "    \n",
+            "Digite uma opção: 2\n",
+            "O produto da operação 6 * 0 é 0\n",
+            "=-==-==-==-==-==-==-==-==-==-=\n",
+            "\n",
+            "    =-=-=-=-=-=-=-=-=-=-=\n",
+            "    [ 1 ] somar\n",
+            "    [ 2 ] multiplicar\n",
+            "    [ 3 ] maior\n",
+            "    [ 4 ] novos números\n",
+            "    [ 5 ] sir\n",
+            "    =-=-=-=-=-=-=-=-=-=-=\n",
+            "    \n",
+            "Digite uma opção: 5\n",
+            "Finalizando...\n",
+            "=-==-==-==-==-==-==-==-==-==-=\n",
+            "Volte sempre!\n"
           ]
         }
       ]
