--- a/Python/MUNDO 2/Curso_em_Vídeo_PYTHON_3_MUNDO_2.ipynb
+++ b/Python/MUNDO 2/Curso_em_Vídeo_PYTHON_3_MUNDO_2.ipynb
@@ -1549,7 +1549,7 @@
         "id": "b5acf8xG5C7A",
         "outputId": "e981e8a6-7599-4b98-ae36-c63247e4e3e4"
       },
-      "execution_count": 24,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1608,6 +1608,42 @@
             "Finalizando...\n",
             "=-==-==-==-==-==-==-==-==-==-=\n",
             "Volte sempre!\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Exercício Python 060: Faça um programa que leia um número\n",
+        "# qualquer e mostre o seu fatorial.\n",
+        "# Exemplo: 5! = 5 x 4 x 3 x 2 x 1 = 120\n",
+        "n = int(input('Diginte um número inteiro para calcular o fatorial: '))\n",
+        "f = 1\n",
+        "t = n\n",
+        "print (f'{t}! = ', end='')\n",
+        "while n > 0:\n",
+        "    print (f'''{n}''' , end='')\n",
+        "    print (' x ' if n>1 else ' = ', end='')\n",
+        "    f *= n\n",
+        "    n -= 1\n",
+        "print (f'{f}', end='')"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "4yDJu2bNmXAT",
+        "outputId": "57c81dbb-428c-4796-b55c-89d7d4468981"
+      },
+      "execution_count": 17,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Diginte um número inteiro para calcular o fatorial: 5\n",
+            "5! = 5 x 4 x 3 x 2 x 1 = 120"
           ]
         }
       ]
